--- a/EmpresaImportadoraDC/Views/Clientes/CrearCliente.cshtml
+++ b/EmpresaImportadoraDC/Views/Clientes/CrearCliente.cshtml
@@ -1,5 +1,44 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@model EmpresaImportadoraDC.Models.Entities.Cliente
 @{
+    ViewData["Title"] = "CrearCliente";
+}
+
+<h1>CrearCliente</h1>
+
+<h4>Cliente</h4>
+<hr />
+<div class="row">
+    <div class="col-md-4">
+        <form asp-action="CrearEditarEmpleado" asp-route-id="@Model.ClienteId" enctype="multipart/form-data">
+            <input type="hidden" asp-for="ClienteId" />
+ 
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <div class="form-group">
+                <label asp-for="NombreCliente" class="control-label"></label>
+                <input asp-for="NombreCliente" class="form-control" />
+                <span asp-validation-for="NombreCliente" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Correo" class="control-label"></label>
+                <input asp-for="Correo" class="form-control" />
+                <span asp-validation-for="Correo" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="DireccionEntrega" class="control-label"></label>
+                <input asp-for="DireccionEntrega" class="form-control" />
+                <span asp-validation-for="DireccionEntrega" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <input type="submit" value="Guardar" class="btn btn-primary" />
+            </div>
+        </form>
+    </div>
+</div>
+
+<div>
+    <a asp-action="Index">volver</a>
+</div>
+
+@section Scripts {
+    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
