--- a/EmpresaImportadoraDC/Views/Paquetes/Index.cshtml
+++ b/EmpresaImportadoraDC/Views/Paquetes/Index.cshtml
@@ -66,7 +66,7 @@
                         </td>
                         <td>
                             <a asp-action="DetallePaquete" asp-route-id="@item.PaqueteId" class="btn btn-success">Detalle</a>
-                            <a asp-action="CrearEditarPaquete" asp-route-id="@item.PaqueteId" class="btn btn-success">Editar</a>
+                            <a asp-action="EditarPaquete" asp-route-id="@item.PaqueteId" class="btn btn-success">Editar</a>
                             <a asp-action="" class="btn btn-success btn-danger">Eliminar</a>
                         </td>
                     </tr>
