--- a/EmpresaImportadoraDC/Views/Shared/_Sidebar.cshtml
+++ b/EmpresaImportadoraDC/Views/Shared/_Sidebar.cshtml
@@ -39,7 +39,7 @@
                     <a href="#" class="nav-link">
                         <i class="fas fa-archive"></i>
                         <p>
-                            PAQUETE
+                            Inicio
                             <i class="right fas fa-angle-left"></i>
                         </p>
                     </a>
@@ -51,11 +51,17 @@
                             </a>
                         </li>
                         <li class="nav-item">
+                            <a asp-action="index" asp-controller="Clientes" class="nav-link">
+                                <i class="fas fa-box-open"></i>
+                                <p>Clientes</p>
+                            </a>
+                        </li>
+                        <li class="nav-item">
                             <a asp-action="index" asp-controller="Paquetes" class="nav-link">
                                 <i class="fas fa-box-open"></i>
                                 <p>Paquetes</p>
                             </a>
-                        </li>                        
+                        </li>
                     </ul>
                 </li>
             </ul>
