--- a/EmpresaImportadoraDC/Views/Paquetes/DetallePaquete.cshtml
+++ b/EmpresaImportadoraDC/Views/Paquetes/DetallePaquete.cshtml
@@ -21,7 +21,7 @@
     </div>
 </section>
 <br />
-<div class="container">
+<div class="container-fluid">
     
         <form asp-route-id="@Model.PaqueteId">
             <div asp-validation-summary="ModelOnly"></div>
