--- a/EmpresaImportadoraDC/Views/Paquetes/EditarPaquete.cshtml
+++ b/EmpresaImportadoraDC/Views/Paquetes/EditarPaquete.cshtml
@@ -1,7 +1,7 @@
 ﻿@model EmpresaImportadoraDC.ViewModels.PaqueteViewModel
 
 @{
-    ViewData["Title"] = "Detalle";
+    ViewData["Title"] = "Editar";
 }
 
 <section class="content">
@@ -20,10 +20,10 @@
         </div>
     </div>
 </section>
-<div class="container">
+<div class="container-fluid">
     <div class="row">
         <div class="col-md-4">
-            <form asp-action="CrearPaquete" asp-route-id="@Model.PaqueteId" enctype="multipart/form-data">
+            <form asp-action="EditarPaquete" asp-route-id="@Model.PaqueteId" enctype="multipart/form-data">  
                 <input type="hidden" asp-for="PaqueteId" />
                 <input type="hidden" asp-for="NoGuiaCO" />
                 <input type="hidden" asp-for="TransportadoraCO" />
@@ -59,11 +59,6 @@
                     <span asp-validation-for="MercanciaId" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <label asp-for="Imagen" class="control-label"></label>
-                    <input type="file" asp-for="Imagen" accept="image/*" />
-                    <span asp-validation-for="Imagen" class="text-danger"></span>
-                </div>
-                <div class="form-group">
                     <label asp-for="NoGuiaCO" class="control-label"></label>
                     <input asp-for="NoGuiaCO" class="form-control" />
                     <span asp-validation-for="NoGuiaCO" class="text-danger"></span>
@@ -79,7 +74,12 @@
                     <span asp-validation-for="ValorTotal" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <input type="submit" value="Guardar" class="btn btn-primary" />
+                    <label asp-for="Imagen" class="control-label"></label>
+                    <input type="file" asp-for="Imagen" accept="image/*" />
+                    <span asp-validation-for="Imagen" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <input type="submit" value="Editar" class="btn btn-primary" />
                 </div>
             </form>
         </div>
