--- a/EmpresaImportadoraDC/Views/Shared/_Layout.cshtml
+++ b/EmpresaImportadoraDC/Views/Shared/_Layout.cshtml
@@ -20,17 +20,19 @@
             <main role="main" class="content">
                 @RenderBody()
             </main>
-        </div>        
+        </div>
     </div>
-        <partial name="_Footer" />
+    <partial name="_Footer" />
 
-    
+
     <!-- jQuery -->
     <script src="~/adminlte/plugins/jquery/jquery.min.js"></script>
     <!-- Bootstrap 4 -->
     <script src="~/adminlte/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
     <!-- AdminLTE App -->
     <script src="~/adminlte/dist/js/adminlte.min.js"></script>
+    <!-- AdminLTE for demo purposes -->
+    <script src="~/adminlte/dist/js/demo.js"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
