--- a/EmpresaImportadoraDC/Views/Shared/_Sidebar.cshtml
+++ b/EmpresaImportadoraDC/Views/Shared/_Sidebar.cshtml
@@ -33,13 +33,11 @@
         <!-- Sidebar Menu -->
         <nav class="mt-2">
             <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
-                <!-- Add icons to the links using the .nav-icon class
-                     with font-awesome or any other icon font library -->
                 <li class="nav-item">
                     <a href="#" class="nav-link">
                         <i class="fas fa-archive"></i>
                         <p>
-                            Inicio
+                            CLIENTE
                             <i class="right fas fa-angle-left"></i>
                         </p>
                     </a>
@@ -56,6 +54,23 @@
                                 <p>Clientes</p>
                             </a>
                         </li>
+                    </ul>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link">
+                        <i class="fas fa-archive"></i>
+                        <p>
+                            PAQUETE
+                            <i class="right fas fa-angle-left"></i>
+                        </p>
+                    </a>
+                    <ul class="nav nav-treeview">
+                        <li class="nav-item">
+                            <a href="pages/charts/chartjs.html" class="nav-link">
+                                <i class="fas fa-hockey-puck"></i>
+                                <p>Dashboard</p>
+                            </a>
+                        </li>
                         <li class="nav-item">
                             <a asp-action="index" asp-controller="Paquetes" class="nav-link">
                                 <i class="fas fa-box-open"></i>
@@ -64,8 +79,37 @@
                         </li>
                     </ul>
                 </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link">
+                        <i class="fas fa-archive"></i>
+                        <p>
+                            CONFIGURACIÓN
+                            <i class="right fas fa-angle-left"></i>
+                        </p>
+                    </a>
+                    <ul class="nav nav-treeview">
+                        <li class="nav-item">
+                            <a href="pages/charts/chartjs.html" class="nav-link">
+                                <i class="fas fa-hockey-puck"></i>
+                                <p>Valor Libra</p>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="pages/charts/chartjs.html" class="nav-link">
+                                <i class="fas fa-hockey-puck"></i>
+                                <p>Mercancias</p>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="pages/charts/chartjs.html" class="nav-link">
+                                <i class="fas fa-hockey-puck"></i>
+                                <p>Transportadoras</p>
+                            </a>
+                        </li>
+                    </ul>
+                </li>
             </ul>
-        </nav>
+        </nav>        
         <!-- /.sidebar-menu -->
     </div>
     <!-- /.sidebar -->
