--- a/EmpresaImportadoraDC/Views/Paquetes/CrearPaquete.cshtml
+++ b/EmpresaImportadoraDC/Views/Paquetes/CrearPaquete.cshtml
@@ -13,14 +13,14 @@
             </div>
             <div class="col-sm-6">
                 <ol class="breadcrumb float-sm-right">
-                    <li class="breadcrumb-item"><a href="#">Inicio</a></li>
+                    <li class="breadcrumb-item"><a asp-action="index" asp-controller="Paquetes">Inicio</a></li>
                     <li class="breadcrumb-item active">Registrar paquete</li>
                 </ol>
             </div>
         </div>
     </div>
 </section>
-<div class="container">
+<div class="container-fluid">
     <div class="row">
         <div class="col-md-4">
             <form asp-action="CrearPaquete" enctype="multipart/form-data">
@@ -34,8 +34,8 @@
                     <span asp-validation-for="PesoLibras" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <label asp-for="ClienteId" class="control-label"></label>
-                    <input asp-for="ClienteId" class="form-control" />
+                    <label class="control-label">Cliente</label>
+                    <select asp-items="ViewBag.ListaClientes" asp-for="ClienteId" class="form-control"></select>
                     <span asp-validation-for="ClienteId" class="text-danger"></span>
                 </div>
                 <div class="form-group">
@@ -49,7 +49,7 @@
                     <span asp-validation-for="TransportadoraUSA" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <label asp-for="MercanciaId" class="control-label"></label>
+                    <label class="control-label">Tipo de mercancía</label>
                     <input asp-for="MercanciaId" class="form-control" />
                     <span asp-validation-for="MercanciaId" class="text-danger"></span>
                 </div>
