--- a/EmpresaImportadoraDC/Views/Paquetes/EditarPaquete.cshtml
+++ b/EmpresaImportadoraDC/Views/Paquetes/EditarPaquete.cshtml
@@ -13,7 +13,7 @@
             </div>
             <div class="col-sm-6">
                 <ol class="breadcrumb float-sm-right">
-                    <li class="breadcrumb-item"><a href="#">Inicio</a></li>
+                    <li class="breadcrumb-item"><a asp-action="index" asp-controller="Paquetes">Inicio</a></li>
                     <li class="breadcrumb-item active">Editar paquete</li>
                 </ol>
             </div>
@@ -39,8 +39,8 @@
                     <span asp-validation-for="PesoLibras" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <label asp-for="ClienteId" class="control-label"></label>
-                    <input asp-for="ClienteId" class="form-control" />
+                    <label class="control-label">Cliente</label>
+                    <select asp-items="ViewBag.ListaClientes" asp-for="ClienteId" class="form-control"></select>
                     <span asp-validation-for="ClienteId" class="text-danger"></span>
                 </div>
                 <div class="form-group">
