--- a/EmpresaImportadoraDC/Views/Paquetes/Index.cshtml
+++ b/EmpresaImportadoraDC/Views/Paquetes/Index.cshtml
@@ -67,7 +67,9 @@
                         <td>
                             <a asp-action="DetallePaquete" asp-route-id="@item.PaqueteId" class="btn btn-success">Detalle</a>
                             <a asp-action="EditarPaquete" asp-route-id="@item.PaqueteId" class="btn btn-success">Editar</a>
-                            <a asp-action="" class="btn btn-success btn-danger">Eliminar</a>
+                            <form asp-action="EliminarPaquete" asp-route-id="@item.PaqueteId" class="d-inline">
+                                <button type="submit" class="btn btn-danger">Eliminar</button>
+                            </form>                            
                         </td>
                     </tr>
                 }
