--- a/EmpresaImportadoraDC/Views/Shared/_Sidebar.cshtml
+++ b/EmpresaImportadoraDC/Views/Shared/_Sidebar.cshtml
@@ -66,7 +66,7 @@
                     </a>
                     <ul class="nav nav-treeview">
                         <li class="nav-item">
-                            <a href="pages/charts/chartjs.html" class="nav-link">
+                            <a asp-action="DashboardPaquete" asp-controller="Paquetes" class="nav-link">
                                 <i class="fas fa-hockey-puck"></i>
                                 <p>Dashboard</p>
                             </a>
