--- a/EmpresaImportadoraDC/Views/Paquetes/CrearPaquete.cshtml
+++ b/EmpresaImportadoraDC/Views/Paquetes/CrearPaquete.cshtml
@@ -50,7 +50,7 @@
                 </div>
                 <div class="form-group">
                     <label class="control-label">Tipo de mercancía</label>
-                    <input asp-for="MercanciaId" class="form-control" />
+                    <select asp-items="ViewBag.ListaMercancia" asp-for="MercanciaId" class="form-control"></select>                    
                     <span asp-validation-for="MercanciaId" class="text-danger"></span>
                 </div>
                 <div class="form-group">
