--- a/EmpresaImportadoraDC/Views/Paquetes/EditarPaquete.cshtml
+++ b/EmpresaImportadoraDC/Views/Paquetes/EditarPaquete.cshtml
@@ -54,8 +54,8 @@
                     <span asp-validation-for="TransportadoraUSA" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <label asp-for="MercanciaId" class="control-label"></label>
-                    <input asp-for="MercanciaId" class="form-control" />
+                    <label class="control-label">Tipo de mercancía</label>                    
+                    <select asp-items="ViewBag.ListaMercancia" asp-for="MercanciaId" class="form-control"></select>
                     <span asp-validation-for="MercanciaId" class="text-danger"></span>
                 </div>
                 <div class="form-group">
